bugfix [deleteing project, misaligned checkbox, cleaned up code]

--- a/src/app.css
+++ b/src/app.css
@@ -208,7 +208,7 @@ body {
     flex-wrap: wrap;
     width: 100%;
     justify-content: flex-start;
-    align-items: flex-start;
+    align-items: center;
     gap: 5px;
     border-radius: 5px;
     padding: 2px 5px;  
@@ -225,10 +225,6 @@ body {
     padding: 2px;
     border-radius: 5px;
     justify-self: flex-end;
-}
-
-.main > .container > input {
-    margin-top: 5px;
 }
 
 .main > .container > p {
